--- a/static/modalbox.css
+++ b/static/modalbox.css
@@ -1,7 +1,7 @@
 /* The Modal (background) */
 #modal {
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 3; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -38,7 +38,7 @@
   padding: 20px;
   position: relative;
   height: 85%;
-  z-index: 1;
+  z-index: 9999;
   border: 1px solid #888;
   width: 60%; /* Could be more or less, depending on screen size */
 }
